[gd_scene load_steps=16 format=2]

[ext_resource path="res://img/worm/ss_full_n.png" type="Texture" id=1]
[ext_resource path="res://material/worm.tres" type="Material" id=2]
[ext_resource path="res://img/worm/ss_full.png" type="Texture" id=3]
[ext_resource path="res://worm/head_kinematic.gd" type="Script" id=4]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=5]
[ext_resource path="res://img/worm/ss_blood_mask_full.png" type="Texture" id=6]
[ext_resource path="res://scene/particles/DirtExplode.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/particles/BloodExplode.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 62.0
height = 58.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("blood:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blood:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "chomp_to_idle"
length = 0.333333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.294 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_chomp_to_idle_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blood:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25, 0.291667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blood:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25, 0.291667, 0.333334, 0.375, 0.416667, 0.458334, 0.5, 0.541667, 0.583334, 0.625001, 0.666667, 0.708334, 0.750001, 0.791667, 0.833334, 0.875001, 0.916667, 0.958334 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "mouth_chomp"
length = 0.833333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.84 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_mouth_chomp_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blood:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25, 0.291667, 0.333334, 0.375, 0.416667, 0.458334, 0.5, 0.541667, 0.583334, 0.625001, 0.666667, 0.708334, 0.750001, 0.791667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=5]
resource_name = "mouth_open_wide"
length = 0.833333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.833333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_mouth_open_wide_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blood:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25, 0.291667, 0.333334, 0.375, 0.416667, 0.458334, 0.5, 0.541667, 0.583334, 0.625001, 0.666667, 0.708334, 0.750001, 0.791667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 10.714

[node name="HeadKinematic" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )
damage_textures = [ "res://img/worm/ss_full.png", "res://img/worm/ss_gore1_full.png", "res://img/worm/ss_gore2_full.png" ]
damage_normals = [ "res://img/worm/ss_full_n.png", "res://img/worm/ss_gore1_full_n.png", "res://img/worm/ss_gore2_full_n.png" ]

[node name="colision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 13, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="image" type="Sprite" parent="."]
material = ExtResource( 2 )
texture = ExtResource( 3 )
normal_map = ExtResource( 1 )
hframes = 11
vframes = 7
frame = 8

[node name="blood" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 6 )
normal_map = ExtResource( 1 )
hframes = 11
vframes = 7
frame = 8

[node name="DirtExplode" parent="." instance=ExtResource( 7 )]
z_index = 10
emitting = false
one_shot = true
local_coords = false

[node name="BloodExplode" parent="." instance=ExtResource( 8 )]
scale = Vector2( 1.75, 1.75 )
color = Color( 0.117647, 0.0313726, 0.278431, 1 )
gore_color = Color( 0.117647, 0.0313726, 0.278431, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/chomp_to_idle = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/mouth_chomp = SubResource( 4 )
anims/mouth_open_wide = SubResource( 5 )

[node name="DepthController" parent="." instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="."]

[node name="BiteHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteHitbox"]
position = Vector2( 19, 2 )
scale = Vector2( 10.68, 12.12 )
shape = SubResource( 6 )

[connection signal="area_entered" from="BiteHitbox" to="." method="_on_BiteHitbox_area_entered"]
